@@ -23,5 +23,6 @@ class xPDOMaxLengthValidationRule extends xPDOValidationRule {
         if ($result === false) {
             $this->validator->addMessage($this->field, $this->name, $this->message);
         }
+        return $result;
     }
 }
